--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "paths": {
+      "ui": [
+        "./dist/ui"
+      ]
+    },
     "lib": [
       "ES2022",
       "dom"
