--- a/.storybook/tsconfig.doc.json
+++ b/.storybook/tsconfig.doc.json
@@ -6,5 +6,7 @@
   "exclude": ["../src/test.ts", "../src/**/*.spec.ts", "../src/**/*.stories.ts"],
   // Please make sure to include all files from which Compodoc should generate documentation.
   "include": ["../src/**/*"],
-  "files": ["./typings.d.ts"]
+  "files": [
+    "./typings.d.ts"
+  ]
 }
