--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -5,7 +5,11 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
-  "exclude": ["../src/test.ts", "../src/**/*.spec.ts"],
-  "include": ["../src/**/*.stories.*", "./preview.ts"],
-  "files": ["./typings.d.ts"]
+  "exclude": ["../projects/test.ts", "../projects/**/*.spec.ts"],
+  "include": ["../projects/**/*.stories.*",
+    "./preview.ts"
+  ],
+  "files": [
+    "./typings.d.ts"
+  ]
 }
